--- a/index.html
+++ b/index.html
@@ -34,20 +34,24 @@
         </nav>
         <ul class="list contact-list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link contact"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link contact">
+              <svg class="contact-icon">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link contact"
-              >+38 096 111 11 11</a
+              ><svg class="contact-icon">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-button">Замовити послугу</button>
@@ -132,6 +136,30 @@
               <div class="team-container">
                 <h3 class="card-title">Ігор Дем'яненко</h3>
                 <p lang="en" class="card-text">Product Designer</p>
+                <div class="team-social">
+                  <ul class="list social-list">
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -144,6 +172,30 @@
               <div class="team-container">
                 <h3 class="card-title">Ольга Рєпіна</h3>
                 <p lang="en" class="card-text">Frontend Developer</p>
+                <div class="team-social">
+                  <ul class="list social-list">
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -156,6 +208,30 @@
               <div class="team-container">
                 <h3 class="card-title">Микола Тарасов</h3>
                 <p lang="en" class="card-text">Marketing</p>
+                <div class="team-social">
+                  <ul class="list social-list">
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -168,7 +244,80 @@
               <div class="team-container">
                 <h3 class="card-title">Михайло Єрмаков</h3>
                 <p lang="en" class="card-text">UI Designer</p>
+                <div class="team-social">
+                  <ul class="list social-list">
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg></a>
+                    </li>
+                    <li class="item">
+                      <a class="link social-list-link" href=""><svg class="team-social-icon">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="main-section clients">
+        <div class="container">
+          <h2 class="title clients-title">Постійні клієнти</h2>
+          <ul class="list clients-list">
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="link clients-link" href="">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -176,22 +325,49 @@
     </main>
     <footer class="site-footer">
       <div class="container">
-        <a href="/" lang="en" class="footer logo"><span>Web</span>Studio</a>
-        <address class="address">
-          <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list footer-list">
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="link address"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="link address"
-                >+38 096 111 11 11</a
-              >
-            </li>
+        <div class="footer-addres">
+          <a href="/" lang="en" class="footer logo"><span>Web</span>Studio</a>
+          <address class="address">
+            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list footer-list">
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="link address"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="link address"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="social-title">Приєднуйтесь</h2>
+          <ul class="list social-list">
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
