--- a/portfolio.html
+++ b/portfolio.html
@@ -24,23 +24,27 @@
           <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
           <ul class="list header-list">
             <li class="item">
-              <a href="./index.html" class="link">Студія</a>
+              <a href="./index.html" class="link current">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфоліо</a>
+              <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
             <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list contact-list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link contact"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link contact">
+              <svg class="contact-icon">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link contact"
-              >+38 096 111 11 11</a
+              ><svg class="contact-icon">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -69,113 +73,141 @@
           </ul>
           <ul class="list portfolio">
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/techcrack.jpg"
-                alt="технокряк фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/techcrack.jpg"
+                  alt="технокряк фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/poster.jpg"
-                alt="постер фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/poster.jpg"
+                  alt="постер фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/seafoodrest.jpg"
-                alt="ресторан фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Додаток</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/seafoodrest.jpg"
+                  alt="ресторан фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/primeproj.jpg"
-                alt="проєкт прайм фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-text">Маркетинг</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/primeproj.jpg"
+                  alt="проєкт прайм фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/projboxes.jpg"
-                alt="проєкт боксес фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-text">Додаток</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/projboxes.jpg"
+                  alt="проєкт боксес фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/inspiresite.jpg"
-                alt="натхнення не має меж фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/inspiresite.jpg"
+                  alt="натхнення не має меж фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/publle.jpg"
-                alt="видання фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/publle.jpg"
+                  alt="видання фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Видання Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/labproj.jpg"
-                alt="проєкт лаб фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-text">Маркетинг</p></div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/labproj.jpg"
+                  alt="проєкт лаб фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-image"
-                src="./img/growbusiness.jpg"
-                alt="зростання бізнесу фото"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-section">
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a class="link portfolio-link" href="">
+                <img
+                  class="portfolio-image"
+                  src="./img/growbusiness.jpg"
+                  alt="зростання бізнесу фото"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-section">
+                  <h3 class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-text">Додаток</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -183,22 +215,49 @@
     </main>
     <footer class="site-footer">
       <div class="container">
-        <a href="/" lang="en" class="footer logo"><span>Web</span>Studio</a>
-        <address class="address">
-          <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list footer-list">
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="link address"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="link address"
-                >+38 096 111 11 11</a
-              >
-            </li>
+        <div class="footer-addres">
+          <a href="/" lang="en" class="footer logo"><span>Web</span>Studio</a>
+          <address class="address">
+            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list footer-list">
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="link address"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="link address"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="social-title">Приєднуйтесь</h2>
+          <ul class="list social-list">
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+            <li class="item"><a class="link social-list-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
