--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
           <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
           <ul class="list header-list">
             <li class="item">
-              <a href="./index.html" class="link current">Студія</a>
+              <a href="./index.html" class="link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
             </li>
             <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
