--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="site-header">
       <div class="container header-container">
         <nav class="site-nav">
-          <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
+          <a href="./" lang="en" class="logo"><span>Web</span>Studio</a>
           <ul class="list header-list">
             <li class="item">
               <a href="./index.html" class="link current">Студія</a>
