--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="social-title">Приєднуйтесь</h2>
+          <p class="social-title">Приєднуйтесь</p>
           <ul class="list social-list">
             <li class="item"><a class="link social-list-link" href="">
               <svg class="footer-social-icon">
