--- a/portfolio.html
+++ b/portfolio.html
@@ -88,21 +88,21 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-image"
-                  src="./img/poster.jpg"
-                  alt="постер фото"
-                  width="370"
-                  height="294"
-                />
-                <div class="portfolio-section">
-                  <h2 class="portfolio-title">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p class="portfolio-text">Дизайн</p>
-                </div></a
-              >
+                <a class="link portfolio-link" href="">
+                  <div class="thumb"><img
+                    class="portfolio-image"
+                    src="./img/poster.jpg"
+                    alt="постер фото"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-section">
+                    <h2 class="portfolio-title">
+                      Постер New Orlean vs Golden Star
+                    </h2>
+                    <p class="portfolio-text">Дизайн</p>
+                  </div></div></a
+                >
             </li>
             <li class="portfolio-card">
               <a class="link portfolio-link" href="">
